# german_strings

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  cpp.hint  vcpkg.json
1brc_base/: LICENCE  main.cpp
1brc_base_max/: main.cpp
1brc_base_views/: main.cpp
1brc_gs/: main.cpp
1brc_gs_max/: main.cpp
benchmark/: ANALYSIS.md  CORRECTED_ANALYSIS.md  README.md  SUMMARY.md  analyze_results.py  benchmark.cpp  benchmark.cpp.original  enhanced_benchmark.cpp.disabled  micro_benchmark.cpp.disabled  run_benchmarks.sh  workable_benchmark.cpp
include/: german_string.h
lsm_tree/: main.cpp
src/: german_string.cpp  main.cpp
test/: tests.cpp
triplets/: x64-linux-libcxx.cmake
